Update Firebase configuration for enhanced security and performance optimization

--- a/index.html
+++ b/index.html
@@ -567,12 +567,12 @@
         // Firebase Configuration
         // IMPORTANT: Replace these with your own Firebase project credentials
         const firebaseConfig = {
-            apiKey: "AIzaSyBONEXAMPLE-REPLACE-WITH-YOUR-KEY",
-            authDomain: "your-project.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "1:123456789:web:abcdef123456"
+        apiKey: "AIzaSyDphzeMoTs8LhRibHP1HfbLwx-4eRT0Vy8",
+        authDomain: "gpa-calculator-f3612.firebaseapp.com",
+        projectId: "gpa-calculator-f3612",
+        storageBucket: "gpa-calculator-f3612.firebasestorage.app",
+        messagingSenderId: "832554956342",
+        appId: "1:832554956342:web:9886c2dd9c23a292010a97"
         };
 
         // Initialize Firebase
